--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Style derived from Gazelle Postmod
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,bold);
 @import url(https://rawgit.com/exanurous/haze_pth/master/layout-light.css);
-@import url(https://cdn.rawgit.com/asdfkaba/test/master/panel-light.css);
+@import url(https://rawgit.com/asdfkaba/test/master/panel-light.css);
 
 /* Background Image */
 body {background-image: url('https://i.imgur.com/0YrbXGV.png');}
